--- a/app/junior.html
+++ b/app/junior.html
@@ -327,7 +327,7 @@
 					</div>
 					<div class="item__text">
 						<div class="title-h3">Junior Blue</div>
-						<div class="item__subtitle">15 C2 (45-54,9 грамм)</div>
+						<div class="item__subtitle">15 яиц C2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 
@@ -568,7 +568,6 @@
 				<p>
 					Заранее выложите яйца из холодильника, чтобы они стали комнатной температуры. Я кладу яйца для варки в кастрюльку и заливаю теплой водой из-под крана. Когда кастрюлька наполнится, постепенно поворачиваю кран и увеличиваю температуру воды с яйцами до максимально горячей. Это сэкономит около минуты при варке яиц.
 				</p>
-				<a href="" class="green-link">Подробнее</a>
 			</div>
 		</div>
 		<div class="slide">
@@ -596,7 +595,6 @@
 	
 <section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
 	<div class="uk-container uk-container--small">
-		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Какие элементы содержит яйцо?</h2>
 		<!-- begin composition-slider -->
 <div class="custom-slider">
 	<div class="uk-container">
@@ -607,11 +605,10 @@
 					<p>
 						Ниже представлены таблицы химического состава и диаграммы, из которых Вы можете узнать какая пищевая ценность, какие витамины, минералы, и сколько калорий содержится в данном продукте питания. Со временем Вам достаточно будет одного взгляда на графики, чтобы понять питательную ценность пищи.В таблицах приводятся данные %РСП.
 					</p>
-					<a href="" class="green-link">Подробнее</a>
 				</div>
 			</div>
 			<div class="slide">
-				<img src="img/media/sliders/composition-slide.svg" alt="Состав яйца">
+				<img src="img/media/sliders/composition-slide.png" alt="Состав яйца">
 			</div>
 		</div>
 		<div class="slider__arrows">
@@ -628,7 +625,6 @@
 		</div>
 	</div>
 </div><!-- end composition-slider -->
-
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все факты о яйце</span></a>
 	</div>
 </section>
