--- a/app/recipes.html
+++ b/app/recipes.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Таймер для варки яиц</title>
+	<title>Факты и рцепты</title>
 	<meta property="og:url" content="">
 	<meta property="og:type" content="Article">
 	<meta property="og:site_name" content="">
@@ -128,98 +128,92 @@
 
 	<main class="main-container">	
 		
-	<!-- begin timer-section -->
-	<section class="timer-section">
-		<div class="uk-container uk-container--small">
-			<h2 class="title-h2 uk-text-center">Таймер для варки яиц</h2>
-
-			<div id="timer-1" class="timer-app">
-				<ul class="btns-list">
-					<li class="active"><a href="#">Всмятку</a></li>
-					<li><a href="#">В мешочек</a></li>
-					<li><a href="#">Вкрутую</a></li>
-				</ul>
-				<div class="timer-app__controls uk-flex uk-flex-center uk-flex-top">
-					<div>
-						<div class="timer-app__label">Сорт яйца:</div>
-						<ul class="sort-list">
-							<li class="active" data-time='{"cold": "0:03", "room": "5:00"}'>CB</li>
-							<li data-time='{"cold": "5:40", "room": "4:30"}'>C0</li>
-							<li data-time='{"cold": "5:20", "room": "4:10"}'>C1</li>
-							<li data-time='{"cold": "4:40", "room": "3:40"}'>C2</li>
-							<li data-time='{"cold": "4:00", "room": "3:10"}'>C3</li>
-						</ul>
-					</div>
-					<div>
-						<div class="timer-app__img">
-							<img src="img/media/egg-img-1.svg" alt="">
+	<main class="main-container">
+			
+		<section class="content-section">
+			<div class="uk-container">
+				<h1 class="title-h2 uk-text-center">Рецепты и факты</h1>
+			</div>
+			<ul class="recipes-list" uk-scrollspy="target: .recipe-item; cls: slide-up;">
+								<li class="recipe-item">
+					<div class="recipe-item__inner">
+						<div class="recipe-img">
+							<picture>
+								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
+								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
+								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
+								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
+							</picture>
 						</div>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
+						</p>
 					</div>
-					<div>
-						<div class="toggle">
-							<div class="timer-app__label">Из холодильника</div>
-							<div class="toggle__btn">
-								<div class="toggle__btn-pin"></div>
-							</div>
-							<div class="timer-app__label">Комнатная температура</div>
+				</li>
+								<li class="recipe-item">
+					<div class="recipe-item__inner">
+						<div class="recipe-img">
+							<picture>
+								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
+								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
+								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
+								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
+							</picture>
 						</div>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
+						</p>
 					</div>
-				</div>
+				</li>
+								<li class="recipe-item">
+					<div class="recipe-item__inner">
+						<div class="recipe-img">
+							<picture>
+								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
+								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
+								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
+								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
+							</picture>
+						</div>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
+						</p>
+					</div>
+				</li>
+								<li class="recipe-item">
+					<div class="recipe-item__inner">
+						<div class="recipe-img">
+							<picture>
+								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
+								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
+								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
+								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
+							</picture>
+						</div>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
+						</p>
+					</div>
+				</li>
+								<li class="recipe-item">
+					<div class="recipe-item__inner">
+						<div class="recipe-img">
+							<picture>
+								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
+								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
+								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
+								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
+							</picture>
+						</div>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
+						</p>
+					</div>
+				</li>
+							</ul>
+		</section>
 
-				<div class="timer-app__countdown uk-margin-auto"></div>
-				
-				<div class="timer-app__start uk-flex uk-flex-center">
-					<a href="" class="timer-btn-start btn btn--yellow"><span>Старт</span></a>
-					<a href="" class="timer-btn-stop btn btn--yellow uk-hidden"><span>Стоп</span></a>
-				</div>
-				
-				<div class="timer-app__signal uk-hidden">
-					<audio controls src="img/signal.mp3">
-						<source src="img/signal.mp3" type="audio/mpeg">
-					</audio>
-				</div>
-
-			</div>
-
-		</div>
-	</section><!-- end timer-section -->
-	
-	
-<section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
-	<div class="uk-container uk-container--small">
-		<!-- begin composition-slider -->
-<div class="custom-slider">
-	<div class="uk-container">
-		<div class="slider">
-			<div class="slide">
-				<img data-lazy="img/media/sliders/composition-slide.png" alt="Состав яйца">
-				<div class="custom-slider__text">
-					<p>
-						Ниже представлены таблицы химического состава и диаграммы, из которых Вы можете узнать какая пищевая ценность, какие витамины, минералы, и сколько калорий содержится в данном продукте питания. Со временем Вам достаточно будет одного взгляда на графики, чтобы понять питательную ценность пищи.В таблицах приводятся данные %РСП.
-					</p>
-				</div>
-			</div>
-			<div class="slide">
-				<img src="img/media/sliders/composition-slide.png" alt="Состав яйца">
-			</div>
-		</div>
-		<div class="slider__arrows">
-			<div class="slide-prev">
-				<svg width="154px" height="29px" class="slider-arrow">
-				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#big-arrow-left"></use>
-				</svg>
-			</div>
-			<div class="slide-next">
-				<svg width="154px" height="29px" class="slider-arrow">
-				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#big-arrow-right"></use>
-				</svg>
-			</div>
-		</div>
-	</div>
-</div><!-- end composition-slider -->
-		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все факты о яйце</span></a>
-	</div>
-</section>
+	</main>
 
 	</main>
 	<!-- begin footer -->
