--- a/app/nov.html
+++ b/app/nov.html
@@ -236,7 +236,7 @@
 
 <div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 	<div class="uk-container">
-		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Любимый продукт в самом популярном формате</h2>
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Полезный продукт в удобной упаковке</h2>
 		<ul class="advantages-h-list advantages-h-list--three-items">
 			<li class="item">
 				<div class="item__img">
@@ -575,7 +575,6 @@
 				<p>
 					Заранее выложите яйца из холодильника, чтобы они стали комнатной температуры. Я кладу яйца для варки в кастрюльку и заливаю теплой водой из-под крана. Когда кастрюлька наполнится, постепенно поворачиваю кран и увеличиваю температуру воды с яйцами до максимально горячей. Это сэкономит около минуты при варке яиц.
 				</p>
-				<a href="" class="green-link">Подробнее</a>
 			</div>
 		</div>
 		<div class="slide">
@@ -603,7 +602,6 @@
 	
 <section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
 	<div class="uk-container uk-container--small">
-		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Какие элементы содержит яйцо?</h2>
 		<!-- begin composition-slider -->
 <div class="custom-slider">
 	<div class="uk-container">
@@ -614,11 +612,10 @@
 					<p>
 						Ниже представлены таблицы химического состава и диаграммы, из которых Вы можете узнать какая пищевая ценность, какие витамины, минералы, и сколько калорий содержится в данном продукте питания. Со временем Вам достаточно будет одного взгляда на графики, чтобы понять питательную ценность пищи.В таблицах приводятся данные %РСП.
 					</p>
-					<a href="" class="green-link">Подробнее</a>
 				</div>
 			</div>
 			<div class="slide">
-				<img src="img/media/sliders/composition-slide.svg" alt="Состав яйца">
+				<img src="img/media/sliders/composition-slide.png" alt="Состав яйца">
 			</div>
 		</div>
 		<div class="slider__arrows">
@@ -635,7 +632,6 @@
 		</div>
 	</div>
 </div><!-- end composition-slider -->
-
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все факты о яйце</span></a>
 	</div>
 </section>
