--- a/app/404.html
+++ b/app/404.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Факты и рцепты</title>
+	<title>Контакты</title>
 	<meta property="og:url" content="">
 	<meta property="og:type" content="Article">
 	<meta property="og:site_name" content="">
@@ -128,92 +128,29 @@
 
 	<main class="main-container">	
 		
-	<main class="main-container">
-			
-		<section class="content-section">
-			<div class="uk-container">
-				<h1 class="title-h2 uk-text-center">Рецепты и факты</h1>
-			</div>
-			<ul class="recipes-list" uk-scrollspy="target: .recipe-item; cls: slide-up;">
-								<li class="recipe-item">
-					<div class="recipe-item__inner">
-						<div class="recipe-img">
-							<picture>
-								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
-								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
-								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
-								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
-							</picture>
-						</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
-						</p>
-					</div>
-				</li>
-								<li class="recipe-item">
-					<div class="recipe-item__inner">
-						<div class="recipe-img">
-							<picture>
-								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
-								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
-								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
-								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
-							</picture>
-						</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
-						</p>
-					</div>
-				</li>
-								<li class="recipe-item">
-					<div class="recipe-item__inner">
-						<div class="recipe-img">
-							<picture>
-								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
-								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
-								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
-								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
-							</picture>
-						</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
-						</p>
-					</div>
-				</li>
-								<li class="recipe-item">
-					<div class="recipe-item__inner">
-						<div class="recipe-img">
-							<picture>
-								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
-								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
-								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
-								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
-							</picture>
-						</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
-						</p>
-					</div>
-				</li>
-								<li class="recipe-item">
-					<div class="recipe-item__inner">
-						<div class="recipe-img">
-							<picture>
-								<source srcset="https://via.placeholder.com/1080x1080" media="(min-width: 961px)">
-								<source srcset="https://via.placeholder.com/780x780" media="(min-width: 641px) and (max-width: 960px)">
-								<source srcset="https://via.placeholder.com/480x480" media="(max-width: 640px)">
-								<img src="https://via.placeholder.com/1080x1080" alt="" loading="lazy">
-							</picture>
-						</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim alias minus id, architecto fugiat. Nostrum deserunt at consequuntur, alias, suscipit aut ea itaque nulla magnam, laborum odit. Dignissimos ullam quam nam reprehenderit, accusantium quod modi magnam neque cum optio ea, voluptate possimus numquam architecto ex minima! Suscipit numquam corporis tempore architecto necessitatibus laboriosam quibusdam quaerat deserunt est rem enim quos fuga odio fugiat deleniti alias aliquam adipisci illo rerum eos quod omnis, voluptatibus illum provident. Amet animi molestias vero repellendus rem dolorem deserunt, cupiditate fugit labore, aliquam fuga, ipsam architecto dolore sapiente laboriosam a atque distinctio maxime! Quod, eum.
-						</p>
-					</div>
-				</li>
-							</ul>
-		</section>
-
-	</main>
+<section class="content-section">
+	<div class="uk-container uk-container--medium">
+		<div class="page-not-found">
+			<!-- begin about-egg -->
+			<section class="about-egg uk-text-center" uk-scrollspy="cls: slide-up show;">
+				<h1 class="title-h1 uk-text-center">404</h1>
+				<div class="about-egg__img">
+					<svg width="100%" height="100%" class="yellow-ellipse-3">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
+					</svg>
+					<svg width="100%" height="100%" class="yellow-ellipse-4">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
+					</svg>
+					<img data-src="img/media/egg.png" alt="" uk-img>
+				</div>
+				<div class="about-egg__text">
+					<p>Извините, такой страницы у нас нет</p>
+					<a href="/" class="btn btn--small btn--yellow uk-margin-auto"><span>Перейти на главную</span></a>
+				</div>
+			</section><!-- end about-egg -->
+		</div>
+	</div>
+</section>
 
 	</main>
 	<!-- begin footer -->
