--- a/app/company.html
+++ b/app/company.html
@@ -880,6 +880,8 @@
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript" defer>
+  </script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
