--- a/app/404.html
+++ b/app/404.html
@@ -165,9 +165,8 @@
 					<div class="uk-grid">
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									Наши марки
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li><a href="#">Лето</a></li>
@@ -179,9 +178,8 @@
 						</div>
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									О компании
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li>
@@ -207,9 +205,8 @@
 						</div>
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									Потребителям
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li>
