--- a/app/contacts.html
+++ b/app/contacts.html
@@ -384,9 +384,8 @@
 					<div class="uk-grid">
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									Наши марки
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li><a href="#">Лето</a></li>
@@ -398,9 +397,8 @@
 						</div>
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									О компании
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li>
@@ -426,9 +424,8 @@
 						</div>
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									Потребителям
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li>
