--- a/app/timer.html
+++ b/app/timer.html
@@ -234,9 +234,8 @@
 					<div class="uk-grid">
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									Наши марки
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li><a href="#">Лето</a></li>
@@ -248,9 +247,8 @@
 						</div>
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									О компании
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li>
@@ -276,9 +274,8 @@
 						</div>
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									Потребителям
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li>
