--- a/app/ugodie.html
+++ b/app/ugodie.html
@@ -631,9 +631,8 @@
 					<div class="uk-grid">
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									Наши марки
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li><a href="#">Лето</a></li>
@@ -645,9 +644,8 @@
 						</div>
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									О компании
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li>
@@ -673,9 +671,8 @@
 						</div>
 						<div class="uk-width-1-3@s">
 							<div class="footer__column-wrapper">
-								<div class="footer__title" data-role="toggle-list">
+								<div class="footer__title">
 									Потребителям
-									<i class="icon-arrow-up uk-hidden@s"></i>
 								</div>
 								<ul class="footer__list">
 									<li>
