--- a/app/404.html
+++ b/app/404.html
@@ -26,12 +26,13 @@
 	<![endif]-->
 </head>
 <body class="theme-green">
-	<div class="preloader">
-		<div class="preloader__indicator">
-			<img src="img/preloader.gif" alt="">
-			<div class="preloader__indicator-value">0%</div>
+			<div class="preloader">
+			<div class="preloader__indicator">
+				<img src="img/preloader.gif" alt="">
+				<div class="preloader__indicator-value">0%</div>
+			</div>
 		</div>
-	</div>
+	
 	
 <!-- begin header -->
 <header class="header">
@@ -56,7 +57,9 @@
 					<li><a href="#">Переработка</a></li>
 					<li><a href="#">Контакты</a></li>
 				</ul>
-				<a href="#" class="close-btn js__toggle-mobile-left-menu uk-hidden@m" uk-toggle="target: #offcanvas-menu"></a>
+				<a href="#" class="close-btn js__toggle-mobile-left-menu uk-hidden@m" uk-toggle="target: #offcanvas-menu">
+					<span></span>
+				</a>
 			</div>
 		</div>
 
