--- a/app/drag-drop.html
+++ b/app/drag-drop.html
@@ -129,53 +129,97 @@
 
 	<main class="main-container">	
 		
-<section class="content-section">
-	<div class="uk-container uk-container--medium">
-		<h1 class="uk-text-center">Drag&Drop</h1>
-		
+	<section class="content-section">
+		<div class="uk-container uk-container--medium">
+			<h1 class="uk-text-center">Drag&Drop</h1>
 
-		<div class="users-list-wrapper">
-			<ul class="users-list">
+			<div class="some-content" style="display: none;">
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+									<div class="some-div">
+						<img class="lazy_img" data-src="https://via.placeholder.com/1180x320" alt="">
+					</div>
+							</div>
+
+			<div class="users-list-wrapper">
+				<ul class="users-list">
+											<li class="user-item">0</li>
+											<li class="user-item">1</li>
+											<li class="user-item">2</li>
+											<li class="user-item">3</li>
+											<li class="user-item">4</li>
+											<li class="user-item">5</li>
+											<li class="user-item">6</li>
+											<li class="user-item">7</li>
+											<li class="user-item">8</li>
+											<li class="user-item">9</li>
+											<li class="user-item">10</li>
+											<li class="user-item">11</li>
+											<li class="user-item">12</li>
+									</ul>
+			</div>
+
+			<ul class="task-list">
+				<li class="row">
+					<div class="task-card" draggable="true">
+						<div class="task-card__title">Task-1</div>
+						<div class="task-card__text">Lorem ipsum.</div>
+					</div>
+					<div class="task-card" draggable="true">
+						<div class="task-card__title">Task-2</div>
+						<div class="task-card__text">Lorem ipsum.</div>
+					</div>
+				</li>
+				<li class="row"></li>
+				<li class="row">
+					<div class="task-card" draggable="true">
+						<div class="task-card__title">Task-3</div>
+						<div class="task-card__text">Lorem ipsum.</div>
+					</div>
+				</li>
+				<li class="row">
+					<div class="task-card" draggable="true">
+						<div class="task-card__title">Task-4</div>
+						<div class="task-card__text">Lorem ipsum.</div>
+					</div>
+					<div class="task-card" draggable="true">
+						<div class="task-card__title">Task-5</div>
+						<div class="task-card__text">Lorem ipsum.</div>
+					</div>
+					<div class="task-card" draggable="true">
+						<div class="task-card__title">Task-6</div>
+						<div class="task-card__text">Lorem ipsum.</div>
+					</div>
+				</li>
 			</ul>
+
 		</div>
-
-		<ul class="task-list">
-			<li class="row">
-				<div class="task-card" draggable="true">
-					<div class="task-card__title">Task-1</div>
-					<div class="task-card__text">Lorem ipsum.</div>
-				</div>
-				<div class="task-card" draggable="true">
-					<div class="task-card__title">Task-2</div>
-					<div class="task-card__text">Lorem ipsum.</div>
-				</div>
-			</li>
-			<li class="row">
-			</li>
-			<li class="row">
-				<div class="task-card" draggable="true">
-					<div class="task-card__title">Task-3</div>
-					<div class="task-card__text">Lorem ipsum.</div>
-				</div>
-			</li>
-			<li class="row">
-				<div class="task-card" draggable="true">
-					<div class="task-card__title">Task-4</div>
-					<div class="task-card__text">Lorem ipsum.</div>
-				</div>
-				<div class="task-card" draggable="true">
-					<div class="task-card__title">Task-5</div>
-					<div class="task-card__text">Lorem ipsum.</div>
-				</div>
-				<div class="task-card" draggable="true">
-					<div class="task-card__title">Task-6</div>
-					<div class="task-card__text">Lorem ipsum.</div>
-				</div>
-			</li>
-		</ul>
-
-	</div>
-</section>
+	</section>
 
 	</main>
 	<!-- begin footer -->
