--- a/app/recipes-old.html
+++ b/app/recipes-old.html
@@ -18,8 +18,9 @@
 	<link rel="stylesheet" href="libs/uikit-3/css/uikit.min.css">
 	<link rel="stylesheet" href="libs/slick/slick.css">
 	<link rel="stylesheet" href="libs/slick/slick-theme.css">
-	<link rel="stylesheet" href="css/style.css">
-	<!--[if lte IE 9]>
+	<link
+	rel="stylesheet" href="css/style.css">
+<!--[if lte IE 9]>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 		<script src="libs/html5shiv.min.js"></script>
 		<script src="libs/placeholders.min.js"></script>
@@ -333,8 +334,7 @@
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript" defer>
-  </script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
