--- a/app/recipes-detail.html
+++ b/app/recipes-detail.html
@@ -142,7 +142,7 @@
 			<!-- begin recipe-detail -->
 			<section class="recipe-detail">
 				<div class="recipe-detail__main-img" uk-scrollspy="cls: slide-up;">
-					<img data-src="img/media/recipes/recipe-4.png" alt="" uk-img>
+					<img data-src="img/media/recipes/recipe-12.jpg" alt="" uk-img>
 				</div>
 
 				<div class="recipe-detail__text">
