правка для детальной рецептов

--- a/app/recipes-detail.html
+++ b/app/recipes-detail.html
@@ -157,6 +157,8 @@
 									<li>Соль, перец черный – по вкусу</li>
 									<li>Масло сливочное — 15 г</li>
 								</ul>
+								<img src="img/icon-svg/large-ellipse-8.svg" alt="ellipse-12" class="ellipse-abs-1 uk-visible@m">
+								<img src="img/icon-svg/large-ellipse-9.svg" alt="ellipse-13" class="ellipse-abs-2 uk-visible@m">
 							</div>
 						</div>
 						<div class="uk-width-1-2@s">
