--- a/app/recipes.html
+++ b/app/recipes.html
@@ -139,7 +139,10 @@
 
 		<section class="content-section">
 			<div class="uk-container">
-				<h1 class="title-h1 uk-text-center">Рецепты</h1>
+				<h1 class="title-h1 uk-text-center">
+					Рецепты
+					<div class="small-title yellow-text uk-text-center">Просто и вкусно</div>
+				</h1>
 
 				<!-- begin recipes-section -->
 				<section class="recipes-section" uk-scrollspy="target: .recipe-post; cls: slide-right; delay: 300">
